BUG FIX: mutect installed to camelCase folder. Add support for install muTect 1.1.1 and 1.1.4

--- a/CBI/mutect/Makefile
+++ b/CBI/mutect/Makefile
@@ -2,6 +2,16 @@ include config.mk
 include ../utils.mk
 
 TARBALL=$(NAME)-$(VERSION)-bin.zip
+URL=https://github.com/broadinstitute/mutect/releases/download/$(VERSION)/$(TARBALL)
+
+ifeq ($(VERSION),1.1.1)
+  TARBALL=muTect-$(VERSION)-bin.zip
+  URL=https://software.broadinstitute.org/cancer/cga/sites/default/files/data/tools/mutect/$(TARBALL)
+else ifeq ($(VERSION),1.1.4)
+  TARBALL=muTect-$(VERSION)-bin.zip
+  URL=https://software.broadinstitute.org/cancer/cga/sites/default/files/data/tools/mutect/$(TARBALL)
+endif
+
 
 ## ----------------------------------------------------------
 ## SOFTWARE
@@ -9,7 +19,7 @@ TARBALL=$(NAME)-$(VERSION)-bin.zip
 $(DOWNLOAD_TARGET):
 	mkdir -p $(BUILD_HOME); \
 	cd $(BUILD_HOME); \
-	curl -L -O https://github.com/broadinstitute/mutect/releases/download/$(VERSION)/$(TARBALL); \
+	curl -L -O "$(URL)"; \
 	unzip -d "$(BUILD_NAME)" "$(TARBALL)"
 
 $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
