gatk: Add FTP URL to legacy GATK versions 1.0.2695-2.3.9

--- a/CBI/gatk/Makefile
+++ b/CBI/gatk/Makefile
@@ -2,6 +2,13 @@ include config.mk
 include ../utils.mk
 
 TARBALL=$(NAME)-$(VERSION).zip
+URL=https://github.com/broadinstitute/gatk/releases/download/$(VERSION)/$(TARBALL)
+
+ifeq ($(VERSION_X),1)
+  TARBALL=$(VERSION).zip
+  URL=https://github.com/broadgsa/gatk-protected/archive/refs/tags/$(TARBALL)
+endif
+
 
 ## ----------------------------------------------------------
 ## SOFTWARE
@@ -9,8 +16,9 @@ TARBALL=$(NAME)-$(VERSION).zip
 $(DOWNLOAD_TARGET):
 	mkdir -p $(BUILD_HOME); \
 	cd $(BUILD_HOME); \
-	curl -J -L -O https://github.com/broadinstitute/gatk/releases/download/$(VERSION)/$(NAME)-$(VERSION).zip; \
-	unzip $(TARBALL)
+	curl -J -L -o "$(TARBALL)" "$(URL)"; \
+	unzip "$(TARBALL)"; \
+	if [[ -d "gatk-protected-$(VERSION)" ]]; then mv "gatk-protected-$(VERSION)" "$(BUILD_NAME)"; fi
 
 $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
 	mkdir -p $(PREFIX)
