pindel: workaround compiler error on newer compiles pindel/0.2.4t: can now be installed samtools/0.x.y: install also include/*.{h,c} and lib/libbam.*

--- a/CBI/pindel/Makefile
+++ b/CBI/pindel/Makefile
@@ -8,16 +8,31 @@ $(DOWNLOAD_TARGET):
 	mkdir -p $(BUILD_HOME); \
 	cd $(BUILD_HOME); \
 	curl -L -O https://github.com/genome/${NAME}/archive/v${VERSION}.tar.gz; \
-	tar zxf v${VERSION}.tar.gz
+	tar zxf v${VERSION}.tar.gz;
+## WORKAROUND: Not gcc 4.8.5, but newer compilers give:
+## error: call of overloaded ‘abs(unsigned int)’ is ambiguous
+	sed -i 's/abs[(]/abs((long int)/g' $(BUILD_PATH)/src/*.cpp;
 
+
+ifeq ($(VERSION),0.2.4t)
 $(BUILD_TARGET): $(DOWNLOAD_TARGET)
 	module --force purge; \
-	module load CBI htslib; \
-	HTSLIB_PATH="$$(dirname $$(dirname $$(which htsfile)))"; \
-	echo "HTSLIB_PATH=$${HTSLIB_PATH}"; \
 	cd $(BUILD_PATH); \
+	module load samtools/0.1.18; \
 	module list; \
-	LIBRARY_PATH="$${HTSLIB_PATH}/lib" ./INSTALL $${HTSLIB_PATH}
+	SAMTOOLS_HOME="$$(dirname $$(dirname $$(which samtools)))"; \
+	echo "SAMTOOLS_HOME=$${SAMTOOLS_HOME}"; \
+	LIBRARY_PATH=$${SAMTOOLS_HOME}/lib ./INSTALL $${SAMTOOLS_HOME}/include;
+else
+$(BUILD_TARGET): $(DOWNLOAD_TARGET)
+	module --force purge; \
+	cd $(BUILD_PATH); \
+	module load htslib; \
+	module list; \
+	SAMTOOLS_HOME="$$(dirname $$(dirname $$(which htsfile)))"; \
+	echo "SAMTOOLS_HOME=$${SAMTOOLS_HOME}"; \
+	LIBRARY_PATH=$${SAMTOOLS_HOME}/lib ./INSTALL $${SAMTOOLS_HOME};
+endif
 
 $(INSTALL_TARGET): $(BUILD_TARGET)
 	mkdir -p $(PREFIX)
