pindel/0.2.4t: workaround to get the correct version

--- a/CBI/pindel/Makefile
+++ b/CBI/pindel/Makefile
@@ -1,18 +1,28 @@
 include config.mk
 include ../utils.mk
 
+TARBALL=v$(VERSION).tar.gz
+## v0.2.4.tar.gz provides 0.2.4w, whereas r0.2.4.tar.gz provides 0.2.4t :/
+ifeq ($(VERSION),0.2.4t)
+TARBALL=r$(VERSION).tar.gz
+endif
+URL=https://github.com/genome/${NAME}/archive/$(TARBALL)
+
 ## ----------------------------------------------------------
 ## SOFTWARE
 ## ----------------------------------------------------------
 $(DOWNLOAD_TARGET):
 	mkdir -p $(BUILD_HOME); \
 	cd $(BUILD_HOME); \
-	curl -L -O https://github.com/genome/${NAME}/archive/v${VERSION}.tar.gz; \
-	tar zxf v${VERSION}.tar.gz;
+	curl -L -O $(URL); \
+	tar zxf $(TARBALL);
+ifeq ($(VERSION),0.2.4t)
+	mv "$(BUILD_HOME)/$(NAME)-r0.2.4t" "$(BUILD_PATH)"
+endif
 ## WORKAROUND: Not gcc 4.8.5, but newer compilers give:
 ## error: call of overloaded ‘abs(unsigned int)’ is ambiguous
+## Source: https://github.com/genome/pindel/pull/102
 	sed -i 's/abs[(]/abs((long int)/g' $(BUILD_PATH)/src/*.cpp;
-
 
 ifeq ($(VERSION),0.2.4t)
 $(BUILD_TARGET): $(DOWNLOAD_TARGET)
