--- a/CBI/gatk/Makefile
+++ b/CBI/gatk/Makefile
@@ -5,10 +5,12 @@ TARBALL=$(NAME)-$(VERSION).zip
 URL=https://github.com/broadinstitute/gatk/releases/download/$(VERSION)/$(TARBALL)
 
 ifeq ($(VERSION_X),1)
-  TARBALL=$(VERSION).zip
-  URL=https://github.com/broadgsa/gatk-protected/archive/refs/tags/$(TARBALL)
+TARBALL=GenomeAnalysisTK-$(VERSION).tar.bz2
+URL=ftp://ftp.broadinstitute.org/pub/gsa/GenomeAnalysisTK/$(TARBALL)
+DOWNLOAD_TARGET_FILE:=GenomeAnalysisTK.jar
 endif
 
+include ../utils.mk
 
 ## ----------------------------------------------------------
 ## SOFTWARE
@@ -19,6 +21,16 @@ $(DOWNLOAD_TARGET):
 	curl -J -L -o "$(TARBALL)" "$(URL)"; \
 	unzip "$(TARBALL)"; \
 	if [[ -d "gatk-protected-$(VERSION)" ]]; then mv "gatk-protected-$(VERSION)" "$(BUILD_NAME)"; fi
+
+ifeq ($(VERSION_X),1)
+$(DOWNLOAD_TARGET):
+	mkdir -p $(BUILD_HOME); \
+	cd $(BUILD_HOME); \
+	curl -O "$(URL)"; \
+	tar jxf "$(TARBALL)"; \
+	mv "GenomeAnalysisTK-$(VERSION)" "$(BUILD_PATH)"
+endif
+
 
 $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
 	mkdir -p $(PREFIX)
