cutadapt/1.*.*: make it possible to install also on TIPCC

--- a/CBI/cutadapt/Makefile
+++ b/CBI/cutadapt/Makefile
@@ -6,12 +6,16 @@ include ../utils.mk
 ## https://github.com/marcelm/cutadapt/blob/main/doc/installation.rst
 $(INSTALL_TARGET):
 	module purge; \
+	module load CBI; \
+	module load python/2.7.15 2> /dev/null || true; \
+	python --version; \
 	module list; \
 	mkdir -p "$(PREFIX)/bin"; \
 	virtualenv "$(PREFIX)/venv"; \
-	"$(PREFIX)/venv/bin/python" -m pip install --upgrade pip; \
-	"$(PREFIX)/venv/bin/pip" install $(NAME)==$(VERSION); \
-	cd "$(PREFIX)/bin"; \
-	ln -s ../venv/bin/cutadapt .
+	. "$(PREFIX)/venv/bin/activate"; \
+	python -m pip install --upgrade pip; \
+	python -m pip install $(NAME)==$(VERSION)
+	ln -fs $(PREFIX)/venv/bin/cutadapt $(PREFIX)/bin/
 	ls -la "$(PREFIX)"
+	ls -la "$(PREFIX)/bin"
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
