gatk/1.*.*: "make download" doesn\'t work, but "make install" do, so just use that

--- a/CBI/gatk/Makefile
+++ b/CBI/gatk/Makefile
@@ -7,21 +7,15 @@ URL=https://github.com/broadinstitute/gatk/releases/download/$(VERSION)/$(TARBAL
 ifeq ($(VERSION_X),1)
 TARBALL=GenomeAnalysisTK-$(VERSION).tar.bz2
 URL=ftp://ftp.broadinstitute.org/pub/gsa/GenomeAnalysisTK/$(TARBALL)
-DOWNLOAD_TARGET_FILE:=GenomeAnalysisTK.jar
+DOWNLOAD_TARGET_FILE=GenomeAnalysisTK.jar
 endif
 
 include ../utils.mk
 
+
 ## ----------------------------------------------------------
 ## SOFTWARE
 ## ----------------------------------------------------------
-$(DOWNLOAD_TARGET):
-	mkdir -p $(BUILD_HOME); \
-	cd $(BUILD_HOME); \
-	curl -J -L -o "$(TARBALL)" "$(URL)"; \
-	unzip "$(TARBALL)"; \
-	if [[ -d "gatk-protected-$(VERSION)" ]]; then mv "gatk-protected-$(VERSION)" "$(BUILD_NAME)"; fi
-
 ifeq ($(VERSION_X),1)
 $(DOWNLOAD_TARGET):
 	mkdir -p $(BUILD_HOME); \
@@ -29,6 +23,13 @@ $(DOWNLOAD_TARGET):
 	curl -O "$(URL)"; \
 	tar jxf "$(TARBALL)"; \
 	mv "GenomeAnalysisTK-$(VERSION)" "$(BUILD_PATH)"
+else
+$(DOWNLOAD_TARGET):
+	mkdir -p $(BUILD_HOME); \
+	cd $(BUILD_HOME); \
+	curl -J -L -o "$(TARBALL)" "$(URL)"; \
+	unzip "$(TARBALL)"; \
+	if [[ -d "gatk-protected-$(VERSION)" ]]; then mv "gatk-protected-$(VERSION)" "$(BUILD_NAME)"; fi
 endif
 
 
