cmake: fix for VERSION >= 3.20.0

--- a/CBI/cmake/Makefile
+++ b/CBI/cmake/Makefile
@@ -4,7 +4,7 @@ include ../utils.mk
 ## ----------------------------------------------------------
 ## SOFTWARE
 ## ----------------------------------------------------------
-ARCH=Linux-x86_64
+ARCH=linux-x86_64
 TARBALL=$(NAME)-$(VERSION)-$(ARCH).tar.gz
 
 $(DOWNLOAD_TARGET):
