easycatfs: make sure to install catfs devel version

--- a/CBI/easycatfs/Makefile
+++ b/CBI/easycatfs/Makefile
@@ -12,12 +12,17 @@ $(DOWNLOAD_TARGET):
 	curl -L -O https://github.com/HenrikBengtsson/easycatfs/archive/refs/tags/$(TARBALL); \
 	tar xzf $(TARBALL)
 
-## NOTE: For now, we install 'catfs' with 'easycatfs' to avoid
-## having a separate module for 'catfs'. This might change later
-## /HB 2022-01-11
-$(BUILD_TARGET): $(DOWNLOAD_TARGET)
-	[[ -x catfs ]] && cp -p catfs "$(BUILD_PATH)/bin"
-	[[ -x "$(BUILD_PATH)/bin/catfs" ]] || cargo install --root=$(BUILD_PATH) catfs
+## For now, we install 'catfs' devel with 'easycatfs' /HB 2022-01-15
+$(BUILD_PATH)/bin/catfs:
+	if [[ -f "catfs" ]]; then \
+	    cp catfs "$(BUILD_PATH)/bin"; \
+	else \
+	    cd $(BUILD_PATH); \
+	    git clone https://github.com/kahing/catfs.git; \
+	    cargo install --root=$(BUILD_PATH) --path=catfs; \
+	fi
+
+$(BUILD_TARGET): $(DOWNLOAD_TARGET) $(BUILD_PATH)/bin/catfs
 
 $(INSTALL_TARGET):
 	mkdir -p $(PREFIX)
