Add rule for making %.lua

--- a/CBI/scl-devtoolset/Makefile
+++ b/CBI/scl-devtoolset/Makefile
@@ -3,7 +3,7 @@ include ../utils.mk
 
 all: debug install_module
 
-incl: incl/4.lua incl/6.lua incl/7.lua incl/8.lua incl/9.lua incl/10.lua
+incl: incl/4.lua incl/6.lua incl/7.lua incl/8.lua incl/9.lua incl/10.lua incl/11.lua
 
 incl/%.lua: /opt/rh/devtoolset-%/enable
 	mkdir -p "$(@D)"
@@ -14,7 +14,7 @@ incl/%.lua: /opt/rh/devtoolset-%/enable
 	    LD_LIBRARY_PATH= $(LMOD_DIR)/sh_to_modulefile "$<"; \
 	} > "$@.tmp"
 	if grep -q -F "setenv(" "$@.tmp"; then \
-	    echo "WARNING: Detected setenv() calls that might have to be edited to be prepend_path():"; \
+	    echo "WARNING: Detected setenv() calls that might have to be edited to become prepend_path():"; \
 	    grep -H -n -F "setenv(" "$@.tmp"; \
 	fi
 	mv "$@.tmp" "$@"
@@ -22,6 +22,9 @@ incl/%.lua: /opt/rh/devtoolset-%/enable
 clean:
 	rm -f s.log
 	rm -rf incl/
+
+%.lua: module.lua.tmpl incl/%.lua
+	cat $^ > "$@"
 
 $(MODULE_TARGET): $(VERSION).lua
 	mkdir -p "$(@D)"
