--- a/.github/workflows/luacheck.yml
+++ b/.github/workflows/luacheck.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
     - name: Checkout git repository
       uses: actions/checkout@v2
+      
+    - name: Install Lua
       uses: leafo/gh-actions-lua@v8.0.0
 
     - name: Install dependencies
