Add URLs + multiline Lua strings

--- a/CBI/scl-devtoolset/Makefile
+++ b/CBI/scl-devtoolset/Makefile
@@ -30,3 +30,6 @@ $(MODULE_TARGET): $(VERSION).lua
 	mkdir -p "$(@D)"
 	cp "$<" "$@"
 
+test: tests/all.sh tests/*.bats
+	echo "SHELL=$$SHELL"
+	tests/all.sh
