java-tweaks: Make sure there's a default version for the hidden module

--- a/CBI/java-tweaks/Makefile
+++ b/CBI/java-tweaks/Makefile
@@ -1,2 +1,8 @@
 include config.mk
 include ../utils.mk
+
+## Make sure there is a default, so we can load the hidden module
+## without having to specify the version, which is irrelevant
+post_install_module:
+	cd "$$(dirname "$(MODULE_TARGET)")"; \
+	ln -fs "$(MODULE_TARGET)" default
