Make sure all custom 'post_install' calls 'make write_protect_install' [#47]

--- a/CBI/expect/Makefile
+++ b/CBI/expect/Makefile
@@ -22,6 +22,7 @@ post_install:
 	cd $(PREFIX); for ff in *.man; do \
 	    mv "$${ff}" "share/man/man1/$${ff/.man/.1}"; \
 	done
+	make write_protect_install
 
 $(INSTALL_TARGET): $(CONFIG_TARGET)
 	mkdir -p $(PREFIX)
