Make sure all custom 'post_install_module' calls 'make write_protect_module' [#47]

--- a/CBI/java-tweaks/Makefile
+++ b/CBI/java-tweaks/Makefile
@@ -6,3 +6,6 @@ include ../utils.mk
 post_install_module:
 	cd "$$(dirname "$(MODULE_TARGET)")"; \
 	ln -fs "$(MODULE_TARGET)" default
+	make write_protect_module
+
+
