--- a/CBI/plink/Makefile
+++ b/CBI/plink/Makefile
@@ -9,8 +9,6 @@ ifeq ($(VERSION),1.07)
 	UNZIP_NAME=$(NAME)-$(VERSION)-$(ARCH)
 else ifeq ($(VERSION),1.90b6.10)
 	ZIPBALL=plink_linux_$(ARCH)_20190617.zip
-	DOWNLOAD_URL=https://s3.amazonaws.com/plink1-assets/$(ZIPBALL)
-	UNZIP_NAME=
 else ifeq ($(VERSION),1.90b6.16)
 	ZIPBALL=plink_linux_$(ARCH)_20200219.zip
 	DOWNLOAD_URL=https://s3.amazonaws.com/plink1-assets/$(ZIPBALL)
@@ -25,6 +23,10 @@ else ifeq ($(VERSION),1.90b6.21)
 	UNZIP_NAME=
 else ifeq ($(VERSION),1.90b6.24)
 	ZIPBALL=plink_linux_$(ARCH)_20210606.zip
+	DOWNLOAD_URL=https://s3.amazonaws.com/plink1-assets/$(ZIPBALL)
+	UNZIP_NAME=
+else ifeq ($(VERSION),1.90b6.25)
+	ZIPBALL=plink_linux_$(ARCH)_20220305.zip
 	DOWNLOAD_URL=https://s3.amazonaws.com/plink1-assets/$(ZIPBALL)
 	UNZIP_NAME=
 endif
