rstudio-server: config in fresh setup

--- a/CBI/rstudio-server/Makefile
+++ b/CBI/rstudio-server/Makefile
@@ -35,7 +35,10 @@ $(CONFIG_TARGET): $(DOWNLOAD_TARGET)
 	cd "$(BUILD_PATH)"; \
 	mkdir -p build; \
 	cd build; \
+	module purge; \
+	module load CBI cmake scl-devtoolset; \
 	command -v ant &> /dev/null || module load CBI apache-ant; \
+	module list; \
 	export RSTUDIO_TOOLS_ROOT=$(BUILD_PATH)/rstudio-tools; \
 	cmake .. -DRSTUDIO_TARGET=Server -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=$(PREFIX) || rm "$@"
 
