blat: don't use 'cp -p' because target gets timestamps of the past if on BeeGFS

--- a/CBI/blat/Makefile
+++ b/CBI/blat/Makefile
@@ -13,8 +13,7 @@ $(DOWNLOAD_TARGET):
 	chmod ugo+x blat gfClient gfServer
 
 $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
-	cp -pR $(BUILD_PATH) $(SOFTWARE_HOME)
-	touch $(PREFIX)/*  ## workaround for time discrepancies
+	cp -R $(BUILD_PATH) $(SOFTWARE_HOME)
 	make post_install
 	ls -la $(PREFIX)
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
